# cangjie_compiler

./: .gitignore  CMakeLists.txt  README.OpenSource  README.md  README_zh.md  build.py
.gitcode/: CODEOWNERS
cmake/: ios_simulator_x86_64_toolchain.cmake  linux_toolchain.cmake  ohos_aarch64_clang_toolchain.cmake
demangler/: Demangler.h
doc/: Standalone_Build_Guide.md  Standalone_Build_Guide_EN.md
schema/: ModuleFormat.fbs  NodeFormat.fbs  PackageFormat.fbs
src/: CMakeLists.txt  main-chir-dis.cpp  main-macrosrv.cpp
src/AST/: Clone.cpp  Node.cpp  PrintNode.cpp  Utils.cpp  Walker.cpp
src/Basic/: CMakeLists.txt  DiagnosticEmitter.cpp  DiagnosticEngine.cpp  DiagnosticEngineImpl.cpp  DiagnosticEngineImpl.h  InteropCJPackageConfigReader.cpp
src/CHIR/: CHIR.cpp  CHIRChecker.cpp  UserDefinedType.cpp  Utils.cpp  Value.cpp
src/CodeGen/: CGContext.h  CGModule.cpp  CGModule.h  CGPkgContext.cpp  CGPkgContext.h  DIBuilder.cpp  DIBuilder.h  EmitBasicBlockIR.cpp  EmitExpressionIR.cpp  EmitFunctionIR.cpp  EmitPackageIR.cpp  EraseUselessIRs.cpp  IRBuilder.cpp  IRBuilder.h
src/Driver/: Driver.cpp  ToolOptions.cpp
src/Frontend/: CompileStrategy.cpp  CompilerInstance.cpp  MergeAnnoFromCjd.cpp
src/Lex/: Lexer.cpp  LexerImpl.cpp  LexerImpl.h
src/Macro/: ExprSerialization.cpp  MacroCallResolve.cpp  MacroEvaluation.cpp  MacroEvaluationClient.cpp  MacroExpansion.cpp  MacroProcess.cpp  NodeSerialization.cpp
src/Option/NativeFFI/: CMakeLists.txt
src/Option/NativeFFI/Java/: CMakeLists.txt  OptionChecker.cpp  OptionChecker.h
unittests/: CMakeLists.txt
(+358 files in other folders)
